xee-xslt-ast/tests/snapshots/snapshot_tests__fork2.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:fork xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\"><xsl:for-each-group select=\"true()\">Content</xsl:for-each-group></xsl:fork>\"#)"
---
Ok(Instruction(Fork(Fork(
  fallbacks: [],
  content: ForEachGroup((ForEachGroup(
    select: Expression(
      xpath: XPath(Expr([
        Path(PathExpr(
          steps: [
            PrimaryExpr(FunctionCall(FunctionCall(
              name: OwnedName(
                local_name_str: "true",
                namespace_str: "http://www.w3.org/2005/xpath-functions",
                prefix_str: "",
              ),
              arguments: [],
            ))),
          ],
        )),
      ])),
      span: Span(
        start: 87,
        end: 93,
      ),
      namespaces: [
        LiteralNamespace(
          prefix: "xsl",
          uri: "http://www.w3.org/1999/XSL/Transform",
        ),
      ],
    ),
    group_by: None,
    group_adjacent: None,
    group_starting_with: None,
    group_ending_with: None,
    composite: false,
    collation: None,
    sort: [],
    sequence_constructor: [
      Content(Text("Content")),
    ],
    span: Span(
      start: 60,
      end: 78,
    ),
  ), [])),
  span: Span(
    start: 1,
    end: 9,
  ),
))))
