xee-xslt-ast/tests/snapshots/snapshot_tests__nested_if.snap
---
source: xee-xslt-ast/tests/snapshot_tests.rs
expression: "parse_sequence_constructor_item(r#\"<xsl:if xmlns:xsl=\"http://www.w3.org/1999/XSL/Transform\" test=\"true()\"><xsl:if test=\"true()\">Hello</xsl:if></xsl:if>\"#)"
---
Ok(Instruction(If(If(
  test: Expression(
    xpath: XPath(Expr([
      Path(PathExpr(
        steps: [
          PrimaryExpr(FunctionCall(FunctionCall(
            name: OwnedName(
              local_name_str: "true",
              namespace_str: "http://www.w3.org/2005/xpath-functions",
              prefix_str: "",
            ),
            arguments: [],
          ))),
        ],
      )),
    ])),
    span: Span(
      start: 63,
      end: 69,
    ),
    namespaces: [
      LiteralNamespace(
        prefix: "xsl",
        uri: "http://www.w3.org/1999/XSL/Transform",
      ),
    ],
  ),
  sequence_constructor: [
    Instruction(If(If(
      test: Expression(
        xpath: XPath(Expr([
          Path(PathExpr(
            steps: [
              PrimaryExpr(FunctionCall(FunctionCall(
                name: OwnedName(
                  local_name_str: "true",
                  namespace_str: "http://www.w3.org/2005/xpath-functions",
                  prefix_str: "",
                ),
                arguments: [],
              ))),
            ],
          )),
        ])),
        span: Span(
          start: 85,
          end: 91,
        ),
        namespaces: [
          LiteralNamespace(
            prefix: "xsl",
            uri: "http://www.w3.org/1999/XSL/Transform",
          ),
        ],
      ),
      sequence_constructor: [
        Content(Text("Hello")),
      ],
      span: Span(
        start: 72,
        end: 78,
      ),
    ))),
  ],
  span: Span(
    start: 1,
    end: 7,
  ),
))))
